chore: Update render.yaml to use worker service instead of background service

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     plan: free
     region: oregon
 
-  - type: background
+  - type: worker
     name: django-celery
     runtime: python
     buildCommand: |
