--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ cryptography==3.4.8
 dataclasses==0.6
 dbus-python==1.2.18
 distro==1.7.0
-Django>=4.2,<5.0
-djangorestframework>=3.15.2
+distro-info==1.1+ubuntu0.2
+Django==4.1.13
+djangorestframework==3.15.2
 djongo==1.3.6
 dnspython==2.5.0
 drf-yasg==1.21.7
